--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -38,5 +38,6 @@
     "title": "Information",
     "description": "With this application you get information about greenlight.tugraz.at."
   },
-  "error-login-message": "You need to be logged in to use this function!"
+  "error-login-message": "You need to be logged in to use this function!",
+  "loading-message": "Loading..."
 }
