--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -22,16 +22,21 @@
     "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
     "filepicker-context": "Choose File for 3G Verification",
-    "filepicker-open-button-title": "Choose File for Verification"
+    "filepicker-open-button-title": "Choose File for Verification",
+    "delete-certificate-failed-title": "Error!",
+    "delete-certificate-failed-body": "An error occurred while removing your 3G proof.",
+    "delete-certificate-success-title": "Successful deleted!",
+    "delete-certificate-success-body": "Your 3G proof has been successfully removed.",
+    "other-error-title": "Error!",
+    "other-error-body": "An unknown error has occurred."
   },
   "acquire-ticket": {
     "title": "Acquire ticket for a place",
     "description": "Here you can acquire a ticket for a location at TU Graz.",
     "activation-link": "activate 3G proof",
-    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have already activated a 3G proof, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3G proof yet, please use the menu item ",
-    "additional-information-2": " to activate a proof or confirm that you have a proof with you.",
+    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3G proof, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3G proof yet, please use the menu item ",
+    "additional-information-2": " to activate a proof. Alternatively, you can manually confirm that you are carrying 3G proof and be able to prove it in case of a manual control.",
     "no-proof-found-message": "No valid 3G proof was found. Please activate a valid 3G detection under the menu item ",
-    "no-proof-found-message-2": ". Alternatively, you can manually confirm that you are carrying 3G proof and be able to prove it in case of a manual control.",
     "valid-proof-found-message": "A valid 3G proof was found. Please select a location to create a ticket.",
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
