--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -15,7 +15,7 @@
     "manually-button-text": "Datei manuell hochladen",
     "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
     "delete-button-text": "Löschen",
-    "refresh-button-text": "Aktualisieren",
+    "refresh-button-text": "Ersetzen",
     "inline-notification-text": "Ein gültiger 3G Nachweis wurde gefunden!",
     "valid-until": "{{date}} um {{clock}} Uhr.",
     "inline-notification-warning": "Ihr 3G Nachweis läuft in Kürze ab!",
@@ -37,10 +37,11 @@
     "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3G Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3G Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
     "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "no-proof-found-message": "Es wurde kein gültiger 3G Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3G Nachweis unter dem Menüpunkt ",
-    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gefunden. Bitte wählen Sie einen Ort aus, um ein Ticket zu erstellen.",
+    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gefunden.",
     "place-select-title": "Ort auswählen",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
-    "confirm-button-text": "Ticket erstellen"
+    "confirm-button-text": "Ticket erstellen",
+    "no-proof-continue": "Ticket trotzdem ausstellen lassen"
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
@@ -49,7 +50,7 @@
     "valid-until": "Gültig bis: {{clock}} Uhr",
     "delete-btn-text": "Löschen",
     "show-btn-text": "Zeigen",
-    "refresh-btn-text": "Aktualisieren"
+    "refresh-btn-text": "Verlängern"
   },
   "info": {
     "title": "Information",
