--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -41,7 +41,11 @@
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
-    "no-proof-continue": "Acquire ticket without 3G proof"
+    "no-proof-continue": "Acquire ticket without 3G proof",
+    "create-ticket-success-title": "Ticket successfully created!",
+    "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
+    "other-error-title": "Error!",
+    "other-error-body": "An unknown error has occurred."
   },
   "show-active-tickets": {
     "title": "Show all active tickets",
