--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -13,11 +13,13 @@
     "data-protection-link": "Zur Datenschutzerklärung",
     "qr-button-text": "QR Code scannen",
     "manually-button-text": "Datei manuell hochladen",
-    "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
+    "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist noch aktiv für",
+    "uploaded-success-message-2": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
     "delete-button-text": "Löschen",
     "refresh-button-text": "Ersetzen",
     "inline-notification-text": "Ein gültiger 3G Nachweis wurde gefunden!",
-    "valid-until": "{{date}} um {{clock}} Uhr.",
+    "valid-until": "{{months}} Monate {{days}} Tage und {{hours}} Stunden.",
+    "valid-until-2": "{{date}} um {{clock}} Uhr.",
     "inline-notification-warning": "Ihr 3G Nachweis läuft in Kürze ab!",
     "activate-button-title": "Aktivieren",
     "filepicker-button-title": "Datei auswählen",
