--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -13,11 +13,13 @@
     "data-protection-link": "Privacy statement",
     "qr-button-text": "Scan QR Code",
     "manually-button-text": "Upload File manually",
-    "uploaded-success-message": "A 3G proof has been successfully verified and is active until",
+    "uploaded-success-message": "A 3G proof has been successfully verified and is active for",
+    "uploaded-success-message-2": "A 3G proof has been successfully verified and is active until",
     "delete-button-text": "Delete",
     "refresh-button-text": "Replace",
     "inline-notification-text": "A valid 3G proof was found!",
-    "valid-until": "{{date}} at {{clock}}.",
+    "valid-until": "{{months}} months {{days}} days and {{hours}} hours.",
+    "valid-until-2": "{{date}} at {{clock}}.",
     "inline-notification-warning": "Your 3G proof will expire soon!",
     "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
