--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -23,14 +23,15 @@
     "inline-notification-warning": "Ihr 3G Nachweis läuft in Kürze ab!",
     "activate-button-title": "Aktivieren",
     "filepicker-button-title": "Datei auswählen",
-    "filepicker-context": "Datei zum Überprüfen auswählen",
-    "filepicker-open-button-title": "Datei zum Überprüfen auswählen",
+    "filepicker-context": "Datei zur Überprüfung auswählen",
+    "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "delete-certificate-failed-title": "Fehler!",
     "delete-certificate-failed-body": "Es ist ein Fehler beim Entfernen Ihres 3G Nachweises aufgetreten.",
     "delete-certificate-success-title": "Löschen erfolgreich!",
     "delete-certificate-success-body": "Ihr 3G Nachweis wurde erfolgreich aus dem System entfernt.",
     "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "manual-uploading-message": "Suche nach validem QR Code..."
   },
   "acquire-ticket": {
     "title": "Ticket für Ort ausstellen",
@@ -47,7 +48,9 @@
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "check-in-link-description": "Möchten Sie auch einchecken?",
+    "check-in-link-text": "TU Graz check-in"
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
