Change date to expire date and change some styles

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -13,13 +13,11 @@
     "data-protection-link": "Zur Datenschutzerklärung",
     "qr-button-text": "QR Code scannen",
     "manually-button-text": "Datei hochladen",
-    "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist noch aktiv für",
-    "uploaded-success-message-2": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
+    "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
+    "valid-until": "{{date}} um {{clock}} Uhr.",
     "delete-button-text": "Löschen",
     "refresh-button-text": "Ersetzen",
     "inline-notification-text": "Ein gültiger 3G Nachweis wurde gefunden!",
-    "valid-until": "{{months}} Monate {{days}} Tage und {{hours}} Stunden.",
-    "valid-until-2": "{{date}} um {{clock}} Uhr.",
     "inline-notification-warning": "Ihr 3G Nachweis läuft in Kürze ab!",
     "activate-button-title": "Aktivieren",
     "filepicker-button-title": "Datei auswählen",
@@ -59,7 +57,9 @@
     "title": "Zeige alle aktiven Tickets",
     "description": "Hier können Sie die Liste aller gültigen Tickets sehen. Diese müssen Sie im Falle einer manuellen Kontrolle vorweisen.",
     "no-tickets-message": "Sie besitzen derzeit keine gültigen Tickets!",
-    "valid-until": "Gültig bis: {{clock}} Uhr",
+    "valid-until-message-1": "Gültig für: ",
+    "valid-until-message-2": "{{hours}} Stunde(n)",
+    "valid-until-message-3": "{{minutes}} Minute(n)",
     "delete-btn-text": "Löschen",
     "show-btn-text": "Zeigen",
     "refresh-btn-text": "Verlängern"
