--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -13,13 +13,11 @@
     "data-protection-link": "Privacy statement",
     "qr-button-text": "Scan QR Code",
     "manually-button-text": "Upload File",
-    "uploaded-success-message": "A 3G proof has been successfully verified and is active for",
-    "uploaded-success-message-2": "A 3G proof has been successfully verified and is active until",
+    "uploaded-success-message": "A 3G proof has been successfully verified and is active until",
+    "valid-until": "{{date}} at {{clock}}.",
     "delete-button-text": "Delete",
     "refresh-button-text": "Replace",
     "inline-notification-text": "A valid 3G proof was found!",
-    "valid-until": "{{months}} months {{days}} days and {{hours}} hours.",
-    "valid-until-2": "{{date}} at {{clock}}.",
     "inline-notification-warning": "Your 3G proof will expire soon!",
     "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
@@ -59,7 +57,9 @@
     "title": "Show all active tickets",
     "description": "Here you can see the list of all valid tickets. You have to show them in case of a manual control.",
     "no-tickets-message": "You do not have any valid tickets!",
-    "valid-until": "Valid until: {{clock}} o'clock",
+    "valid-until-message-1": "Valid for: ",
+    "valid-until-message-2": "{{hours}} hour(s)",
+    "valid-until-message-3": "{{minutes}} minute(s)",
     "delete-btn-text": "Delete",
     "show-btn-text": "Show",
     "refresh-btn-text": "Refresh"
