Add configurable preselected place option

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -51,7 +51,7 @@
     "check-in-link-description": "Möchten Sie auch das Contact Tracing der TU Graz unterstützen?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Aktive Tickets anzeigen",
-    "manage-tickets-text": "Sie können Ihre Tickets verwalten unter: "
+    "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
