--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -67,7 +67,13 @@
     "show-btn-text": "Zeigen",
     "refresh-btn-text": "Verlängern",
     "show-ticket-title": "Ticket für Ort: ",
-    "show-ticket-description": "TODO: Beschreibung"
+    "show-ticket-description": "TODO: Beschreibung",
+    "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
+    "refresh-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
+    "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
+    "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
+    "other-error-title": "Fehler!",
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
   },
   "info": {
     "title": "Information",
