Add new activity for acquire tickets and validate 3g proofs

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -56,6 +56,42 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
   },
+  "acquire-3g-ticket": {
+    "title": "Ticket für Ort ausstellen",
+    "description": "Mit dieser Applikation können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
+    "additional-information": "Sie können einen QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "success-activation-title": "Erfolgreiche Aktivierung!",
+    "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich aktiviert.",
+    "invalid-qr-code-title": "Ungültiger QR Code!",
+    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "no-qr-code-title": "Kein QR Code gefunden!",
+    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "data-protection": "Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App \"TU Graz Greenlight\" finden sie hier:",
+    "data-protection-link": "Zur Datenschutzerklärung",
+    "qr-button-text": "QR Code scannen",
+    "manually-button-text": "Datei hochladen",
+    "activate-button-title": "Aktivieren",
+    "filepicker-button-title": "PDF oder Bild auswählen",
+    "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
+    "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
+    "manual-uploading-message": "Suche nach validem QR Code...",
+    "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?",
+    "no-proof-found-message": "Es wurde kein gültiger 3G Nachweis gefunden.",
+    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gefunden.",
+    "place-select-title": "Ort auswählen",
+    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
+    "confirm-button-text": "Ticket erstellen",
+    "refresh-button-text": "Ticket verlängern",
+    "no-proof-continue": "Ticket ohne 3G Nachweis erstellen",
+    "create-ticket-success-title": "Ticket erfolgreich erstellt!",
+    "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
+    "other-error-title": "Fehler!",
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "check-in-link-description": "Möchten Sie auch das Contact Tracing der TU Graz unterstützen?",
+    "check-in-link-text": "TU Graz check-in",
+    "manage-tickets-link": "Aktive Tickets anzeigen",
+    "manage-tickets-text": "Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: "
+  },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
     "description": "Hier können Sie die Liste aller gültigen Tickets sehen. Diese müssen Sie im Falle einer manuellen Kontrolle vorweisen.",
