--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -56,6 +56,42 @@
     "manage-tickets-link": "Show active tickets",
     "manage-tickets-text": "You can manage your active tickets at: "
   },
+  "acquire-3g-ticket": {
+    "title": "Acquire ticket for a place",
+    "description": "With this application you can acquire a ticket for a location at TU Graz.",
+    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location at TU Graz for a certain period of time. This is needed to be allowed to enter a location at TU Graz. Alternatively, you can manually confirm that you are carrying 3G proof and be able to prove it in case of a manual control.",
+    "success-activation-title": "Successful Activation!",
+    "success-activation-body": "Your 3G proof has been successfully activated.",
+    "invalid-qr-code-title": "Invalid QR Code!",
+    "invalid-qr-code-body": "This QR code is not a valid 3G proof. Please use another one or select the manual 3G inspection at the ticket store.",
+    "no-qr-code-title": "No QR code found!",
+    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3G inspection at the ticket store.",
+    "data-protection": "What does TU Graz do with your data? You can find the data protection declaration for the app \"TU Graz Greenlight\" here:",
+    "data-protection-link": "Privacy statement",
+    "qr-button-text": "Scan QR Code",
+    "manually-button-text": "Upload File",
+    "activate-button-title": "Activate",
+    "filepicker-button-title": "Choose File",
+    "filepicker-context": "Choose File for 3G Verification",
+    "filepicker-open-button-title": "Choose File for Verification",
+    "manual-uploading-message": "Search for valid QR Code...",
+    "confirm-text": "Do you really want to delete your 3G proof?",
+    "no-proof-found-message": "No valid 3G proof was found.",
+    "valid-proof-found-message": "A valid 3G proof was found. Please select a location to create a ticket.",
+    "place-select-title": "Select a place",
+    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
+    "confirm-button-text": "Create a Ticket",
+    "refresh-button-text": "Refresh Ticket",
+    "no-proof-continue": "Acquire ticket without 3G proof",
+    "create-ticket-success-title": "Ticket successfully created!",
+    "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
+    "other-error-title": "Error!",
+    "other-error-body": "An unknown error has occurred.",
+    "check-in-link-description": "Do you want to support contact tracing at TU Graz?",
+    "check-in-link-text": "TU Graz check-in",
+    "manage-tickets-link": "Show active tickets",
+    "manage-tickets-text": "You can manage your active tickets at: "
+  },
   "show-active-tickets": {
     "title": "Show all active tickets",
     "description": "Here you can see the list of all valid tickets. You have to show them in case of a manual control.",
