--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -76,8 +76,8 @@
     "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "manual-uploading-message": "Suche nach validem QR Code...",
     "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?",
-    "no-proof-found-message": "Es wurde kein gültiger 3G Nachweis gefunden.",
-    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gefunden.",
+    "no-proof-found-message": "Es wurde kein gültiger 3G Nachweis gewählt.",
+    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gewählt.",
     "place-select-title": "Ort auswählen",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
@@ -90,7 +90,13 @@
     "check-in-link-description": "Möchten Sie auch das Contact Tracing der TU Graz unterstützen?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Aktive Tickets anzeigen",
-    "manage-tickets-text": "Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: "
+    "manage-tickets-text": "Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
+    "skip-button-text": "Überspringen",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und ich die Validierung meines Zertifikats nicht manipuliert habe.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
+    "valid-cert-found-text": "Bestehenden 3G Nachweis verwenden.",
+    "store-valid-cert-text": "3G Nachweis für später speichern.",
+    "3g-proof-label-text": "3G Nachweis überprüfen"
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
